# rust-actix-crud

./: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  release-plz.toml
.github/workflows/: release.yml
src/: handlers.rs  main.rs  schema.rs
